--- a/src/components/Card/TimelineCard.scss
+++ b/src/components/Card/TimelineCard.scss
@@ -79,7 +79,7 @@
 }
 
 .wrong-effect {
-  transform: rotateY(180deg) rotateZ(-10deg) translate(50px, 50px);
+  transform: rotateY(180deg) rotateZ(-10deg) translate(25px, 25px);
   position: relative;
   z-index: 1;
 }
